--- a/index.html
+++ b/index.html
@@ -1,2 +1,8 @@
-Hello World
+<h1>Hello World</h1>
+<a href=" ">Home</a>
+<a href=" ">Gallery</a>
+<a href=" ">Contact us</a>
+<a href=" ">Sign up</a>
+<a href=" ">Log in</a>
+
 <a href ="https://github.com/jasmeet-12/webproject/blob/main/watch%5B1%5D">Click Me</a>
